<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/searchFragment"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/favoriteFragment"
            android:icon="@android:drawable/ic_menu_save"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/aboutFragment"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_about" />
    </group>
</menu>